creates multimodel. Closes #1